# simple-flask

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
flasker/: __init__.py
tests/: conftest.py  test_app.py
