[project]
name = "simple-flask"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
license = {file = "LICENSE"}
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=25.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
